# RagAssessment

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  ask.py  docker-compose.yml  evaluate.py  ingest.py  pyproject.toml  requirements.txt
MultiNode_12T/: agent.py
SimpleNode_3T/: agent.py
SingleNode_12T/: agent.py
ingestion/: chunker.py  indexer.py  parser.py
shared/: config.py  eval_metrics.py  state.py  tools.py
