[project]
name = "ragassessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "deepeval>=3.9.9",
    "dotenv>=0.9.9",
    "google-genai>=1.73.1",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.10",
    "pdfplumber>=0.11.9",
    "python-docx>=1.2.0",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.1",
]
